# User-Chess-Engine

./: .gitignore  README.md
lab-prog-finale1/: CMakeCache.txt  CMakeLists.txt  Makefile  alfiere.cpp  cmake_install.cmake  computer.cpp  computer.h  lab-prog-finale1.cpp  lab-prog-finale1.vcxproj  lab-prog-finale3.cpp  middlePieces.cpp  middlePieces.h  pedone.cpp  pedone.h  regina.cpp  scacchiera-main.cpp  scacchiera.cpp  scacchiera.h  scacco.h  torre.cpp  traduttore.cpp  traduttore.h
lab-prog-finale1-master/: README.md
lab-prog-finale1-master/lab-prog-finale1/: CMakeLists.txt  logCC.txt  logPC.txt
lab-prog-finale1-master/lab-prog-finale1/h/: alfiere.h  cavallo.h  computer.h  document.h  middlePieces.h  randomMoves.h  re.h  regina.h  replay.h  scacchiera-main.h  scacchiera.h  scacco.h  scaccomatto.h  torre.h  traduttore.h
lab-prog-finale1-master/lab-prog-finale1/src/: alfiere.cpp  cavallo.cpp  computer.cpp  document.cpp  middlePieces.cpp  (+10 more)
lab-prog-finale1/h/: computer.h  document.h  pedone.h  randomMerda.h  replay.h  scacchiera-main.h  scacchiera.h  scacco.h
lab-prog-finale1/lab-prog-finale1/: CMakeLists.txt
lab-prog-finale1/lab-prog-finale1/h/: document.h  randomMoves.h  scacco.h  scaccomatto.h
lab-prog-finale1/lab-prog-finale1/src/: document.cpp  middlePieces.cpp  replay.cpp  scacchiera.cpp  scacco.cpp  scaccomatto.cpp  torre.cpp
lab-prog-finale1/src/: alfiere.cpp  cavallo.cpp  computer.cpp  document.cpp  middlePieces.cpp  randomMerda.cpp  randomMoves.cpp  re.cpp  regina.cpp  replay.cpp  scacchiera-main.cpp  scacchiera.cpp  scacco.cpp  traduttore.cpp
